scripts/originals/cloud_ingress_template.yaml
## Replace all occurrences of ${PX_DOMAIN} with the custom domain name you wish to use
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-ingress-grpcs
  namespace: plc
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPCS"
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ${PX_DOMAIN}
    - work.${PX_DOMAIN}
    secretName: cloud-proxy-tls-certs
  rules:
  - host: ${PX_DOMAIN}
    http:
      paths:
      - path: /px.services.(.*)
        pathType: Prefix
        backend:
          service:
            name: vzconn-service
            port:
              number: 51600
      - path: /px.cloudapi.(.*)
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 51200
      - path: /px.api.(.*)
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 4444
  - host: work.${PX_DOMAIN}
    http:
      paths:
      - path: /px.services.(.*)
        pathType: Prefix
        backend:
          service:
            name: vzconn-service
            port:
              number: 51600
      - path: /px.cloudapi.(.*)
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 51200
      - path: /px.api.(.*)
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 4444
---
## Replace all occurrences of ${PX_DOMAIN} with the custom domain name you wish to use
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-ingress-https
  namespace: plc
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ${PX_DOMAIN}
    - work.${PX_DOMAIN}
    secretName: cloud-proxy-tls-certs
  rules:
  - host: ${PX_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 443
  - host: work.${PX_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 443
