scripts/originals/cloud_ingress_template_old.yaml
## Replace all occurrences of ${PX_DOMAIN} with the custom domain name you wish to use
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-ingress-https
  namespace: plc
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "${SSL_PASSTHROUGH_HTTPS}"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ${PX_DOMAIN}
    - work.${PX_DOMAIN}
    secretName: cloud-proxy-tls-certs
  rules:
  - host: ${PX_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 443
  - host: work.${PX_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 443
## Replace all occurrences of ${PX_DOMAIN} with the custom domain name you wish to use
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-ingress-grpcs
  namespace: plc
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPCS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "${SSL_PASSTHROUGH_GRPCS_OTHERS}"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ${PX_DOMAIN}
    - work.${PX_DOMAIN}
    secretName: cloud-proxy-tls-certs
  rules:
  - host: ${PX_DOMAIN}
    http:
      paths:
      - path: /pl.cloudapi.ArtifactTracker/
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
      - path: /px.services.VZConnService/
        pathType: Prefix
        backend:
          service:
            name: vzconn-service
            port:
              number: 51600
      - path: /px.cloudapi.ArtifactTracker/
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
      - path: /px.cloudapi.APIKeyManager/
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
      - path: /px.cloudapi.ConfigService/
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
      - path: /px.cloudapi.OrganizationService/
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
      - path: /px.cloudapi.PluginService/
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
      - path: /px.cloudapi.UserService/
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
      - path: /px.cloudapi.VizierClusterInfo/
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
      - path: /px.cloudapi.VizierDeploymentKeyManager/
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
      - path: /px.cloudapi.VizierImageAuthorization/
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
  - host: work.${PX_DOMAIN}
    http:
      paths:
      - path: /pl.cloudapi.ArtifactTracker/
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
      - path: /px.services.VZConnService/
        pathType: Prefix
        backend:
          service:
            name: vzconn-service
            port:
              number: 51600
      - path: /px.cloudapi.ArtifactTracker/
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
      - path: /px.cloudapi.APIKeyManager/
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
      - path: /px.cloudapi.ConfigService/
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
      - path: /px.cloudapi.OrganizationService/
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
      - path: /px.cloudapi.PluginService/
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
      - path: /px.cloudapi.UserService/
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
      - path: /px.cloudapi.VizierClusterInfo/
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
      - path: /px.cloudapi.VizierDeploymentKeyManager/
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
      - path: /px.cloudapi.VizierImageAuthorization/
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
## Replace all occurrences of ${PX_DOMAIN} with the custom domain name you wish to use
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-ingress-grpcs-vizier
  namespace: plc
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPCS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "${SSL_PASSTHROUGH_GRPCS_VIZIER}"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ${PX_DOMAIN}
    - work.${PX_DOMAIN}
    secretName: cloud-proxy-tls-certs
  rules:
  - host: ${PX_DOMAIN}
    http:
      paths:
      - path: /px.api.vizierpb.VizierService/
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 4444
  - host: work.${PX_DOMAIN}
    http:
      paths:
      - path: /px.api.vizierpb.VizierService/
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 4444
## Replace all occurrences of ${PX_DOMAIN} with the custom domain name you wish to use
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-ingress-grpcs-auth
  namespace: plc
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPCS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "${SSL_PASSTHROUGH_GRPCS_AUTH}"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ${PX_DOMAIN}
    - work.${PX_DOMAIN}
    secretName: cloud-proxy-tls-certs
  rules:
  - host: ${PX_DOMAIN}
    http:
      paths:
      - path: /px.cloudapi.AuthService/
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
  - host: work.${PX_DOMAIN}
    http:
      paths:
      - path: /px.cloudapi.AuthService/
        pathType: Prefix
        backend:
          service:
            name: cloud-proxy-service
            port:
              number: 5555
