scripts/originals/expose-kratos-template.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: plc
  name: kratos-service
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 4434
  selector:
    name: kratos
  sessionAffinity: None
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kratos-ingress
  namespace: plc
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - kratos.${PX_DOMAIN}
    secretName: cloud-proxy-tls-certs
  rules:
  - host: kratos.${PX_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kratos-service
            port:
              number: 443
